create github pages

--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section article content1 cid-rJpFAuDlRG" id="content1-k">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section article content1 cid-rJpFAuDlRG" id="content1-k">
     
      
 
