--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page1.html"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Publications</a>
+                    <a class="nav-link link text-white display-4" href="publications.html" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Publications</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://scholar.google.co.jp/citations?user=fVCyyDgAAAAJ&hl=en" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Google Scholar</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.com"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-fullscreen mbr-parallax-background" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-fullscreen mbr-parallax-background" id="header16-10">
 
     
 
