--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="mbr-section article content1 cid-rJpFAuDlRG" id="content1-k">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section article content1 cid-rJpFAuDlRG" id="content1-k">
     
      
 
@@ -73,7 +73,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li>Ewerton, M., Arenz, O., Maeda, G., Koert, D., Kolev, Z., Takahashi, M., Peters, J., 2019. Learning trajectory distributions for assisted teleoperation and path planning. Frontiers in Robotics and AI 6, 89. [<a href="./pdf/ewerton2019learningFrontiers.pdf" target="_blank">pdf</a>][<a href="./bibtex/ewerton2019learningFrontiers.txt" target="_blank">BibTex</a>]</li><li>Celemin, C., Maeda, G., Ruiz-del-Solar, J., Peters, J., Kober, J., 2019. Reinforcement Learning of Motor Skills using Policy Search and Human Corrective Advice. International Journal of Robotics Research (IJRR) OnlineFirst. [<a href="./pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">pdf</a>][<a href="./bibtex/celeminReinforcementLearningMotor2019.txt" target="_blank">BibTeX</a>]</li><li><br></li><li>Koc, O.; Maeda, G.; Peters, J. (2018). “Online optimal trajectory generation for robot table tennis”. Robotics and Autonomous Systems (RAS). vol. 105, pp. 121–137. [<a href="./pdf/kocOnlineRAS2018.pdf" target="_blank">pdf</a>][<a href="./bibtex/KocMaePet18.bib" target="_blank">BibTeX</a>]&nbsp;</li><li><br></li><li><br></li>
+                    <li>Ewerton, M., Arenz, O., Maeda, G., Koert, D., Kolev, Z., Takahashi, M., Peters, J., 2019. Learning trajectory distributions for assisted teleoperation and path planning. Frontiers in Robotics and AI 6, 89. [<a href="./pdf/ewerton2019learningFrontiers.pdf" target="_blank">pdf</a>][<a href="./bibtex/ewerton2019learningfrontiers.txt" target="_blank">BibTex</a>]</li><li>Celemin, C., Maeda, G., Ruiz-del-Solar, J., Peters, J., Kober, J., 2019. Reinforcement Learning of Motor Skills using Policy Search and Human Corrective Advice. International Journal of Robotics Research (IJRR) OnlineFirst. [<a href="./pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">pdf</a>][<a href="./bibtex/celeminReinforcementLearningMotor2019.txt" target="_blank">BibTeX</a>]</li><li><br></li><li>Koc, O.; Maeda, G.; Peters, J. (2018). “Online optimal trajectory generation for robot table tennis”. Robotics and Autonomous Systems (RAS). vol. 105, pp. 121–137. [<a href="./pdf/kocOnlineRAS2018.pdf" target="_blank">pdf</a>][<a href="./bibtex/KocMaePet18.bib" target="_blank">BibTeX</a>]&nbsp;</li><li><br></li><li><br></li>
                     <li>Koc, O.; Maeda, G.; Peters, J. (2018). “Online optimal trajectory generation for robot table tennis”. Robotics and Autonomous Systems (RAS). vol. 105, pp. 121–137. [<a href="./pdf/Morimoto2007NECO.pdf" target="_blank">pdf</a>][BibTeX]</li>
                     <li><strong>UNIQUE STYLES</strong> - choose from the large selection of latest pre-made blocks - full-screen intro, bootstrap carousel, content slider, responsive image gallery with lightbox, parallax scrolling, video backgrounds, hamburger menu, sticky header and more. <a href="https://mobirise.co/">Try it now!</a></li><li>asdf</li><li>sadf</li><li><br></li></ol><p><br></p><ol>
                 </ol>
