create github pages

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section article content1 cid-rJE8woqBJ5" id="content1-1m">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content1 cid-rJE8woqBJ5" id="content1-1m">
     
      
 
@@ -73,7 +73,7 @@
 </p><p>
 </p><p>Since 2019, I am working as a researcher at <a href="https://preferred.jp/en/" target="_blank">Preferred Networks Inc.</a> Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a masters at the Tokyo Institute of Technology (TITECH) in control engineering. 
 </p><p>
-</p><p>You can find my <a href="./pdf/maedaCV_20190830wd.pdf" target="_blank"></a><a href="./pdf/gjmaeda_20191204.pdf" target="_blank">CV here</a>.&nbsp;</p><p>Contact
+</p><p>You can find my <a href="./pdf/maedaCV_20190830wd.pdf" target="_blank"></a><a href="./pdf/resume_gjmaeda.pdf" target="_blank">CV here</a>.&nbsp;</p><p>Contact
 :&nbsp;<span style="font-size: 1rem;">gjmaeda@preferred.jp</span></p></div>
         </div>
     </div>
