--- a/about.html
+++ b/about.html
@@ -59,21 +59,13 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content1 cid-rJE8woqBJ5" id="content1-1m">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section article content1 cid-rJE8woqBJ5" id="content1-1m">
     
      
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>I am a research scientist working with robots. The main motivation of my is to get robots learning how help us without the need of hand-coded programs. 
-</p><p>
-</p><p>The applications of interest are those where the robot executes complex, physical interactions with the environment. By complex, I mean interactions that cannot be easily described by physics modeling and first-order principles. One example is when a robot must predict what a human partner is doing so that it can generate its own motion to assist him/her. Another example is when a remotely-located robot must self-adapt to the environment without human supervision.
-</p><p>
-</p><p>Why should we care about such capabilities? Ultimately, we may have to rely on robots to fill existing/future gaps in our society. Examples are found in the inevitable, unprecedented growth of the elderly population (and by being based in Japan, I can see that this is, in fact, a time-critical mission), the assistance of communities and exploration of resources in remote areas, rescue and disaster response, optimized and adaptive rehabilitation and prosthetics, to cite a few. 
-</p><p>
-</p><p>Since 2019, I am working as a researcher at <a href="https://preferred.jp/en/" target="_blank">Preferred Networks Inc.</a> Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a masters at the Tokyo Institute of Technology (TITECH) in control engineering. 
-</p><p>
-</p><p>You can find my <a href="./pdf/maedaCV_20190830wd.pdf" target="_blank"></a><a href="./pdf/resume_gjmaeda.pdf" target="_blank">CV here</a>.&nbsp;</p><p>Contact
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>I am a research scientist working with robots. The motivation of my work is to contribute to the technology that will eventually enable robots to autonomously learn how to help us, without the need of hand-coded programs.</p><p>Applications of interest are those where the robot executes complex, physical interactions with the environment. By complex, I mean interactions that cannot be easily described by physics modeling and first-order principles. One example is when a robot must assess what a human partner is doing so that it can generate corresponding control commands to assist him/her. Another example is when a remotely-located robot must self-adapt to the environment without human supervision.</p><p>Why should we care about such capabilities? Ultimately, we may have to rely on robots to fill existing/future gaps in our society. Examples are found in the inevitable, unprecedented growth of the elderly population, the assistance of communities and exploration of resources in remote areas, rescue and disaster response, optimized and adaptive rehabilitation and prosthetics, to cite a few.</p><p>Since 2019, I am working as a researcher at Preferred Networks Inc. Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a master's at the Tokyo Institute of Technology (TITECH) in control engineering.</p><p>You can find my <a href="./pdf/resume_gjmaeda.pdf" target="_blank">CV here</a>.&nbsp;</p><p>Contact
 :&nbsp;<span style="font-size: 1rem;">gjmaeda@preferred.jp</span></p></div>
         </div>
     </div>
