create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-parallax-background" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="header1 cid-rJBn3T8pcH mbr-parallax-background" id="header16-10">
 
     
 
