--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-fullscreen mbr-parallax-background" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-fullscreen mbr-parallax-background" id="header16-10">
 
     
 
@@ -131,7 +131,7 @@ robot under mild modeling assumptions. To this end, we propose Phase Portrait Mo
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Reinforcement Learning of Motor Skills
 <div>using Policy Search and Human
 </div><div>Corrective Advice (IJRR)</div></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">A human-in-the-loop approach where human feedback can come at any time during the execution of an exploration roll-out. The feedback can also come sporadically, where most of the roll-outs do not even include human feedback. This human feedback is seamlessly incorporated into the policy update as if it were an informed/biased exploration noise. Learning rate increases by factors of 4 to 40 times depending on the task. You can watch the video <a href="https://www.youtube.com/watch?v=Sjngx6-Bk1s" target="_blank">here</a>, and see the details on the paper <a href=",/pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">here</a>.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">A human-in-the-loop approach where human feedback can come at any time during the execution of an exploration roll-out. The feedback can also come sporadically, where most of the roll-outs do not even include human feedback. This human feedback is seamlessly incorporated into the policy update as if it were an informed/biased exploration noise. Learning rate increases by factors of 4 to 40 times depending on the task. You can watch the video <a href="https://www.youtube.com/watch?v=Sjngx6-Bk1s" target="_blank">here</a>, and see the details on the paper <a href="./pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">here</a>.</p>
                     </div>
                 </div>
             </div>
