--- a/ppmp.html
+++ b/ppmp.html
@@ -59,16 +59,16 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
 
     
 
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">Phase Portraits as Movement Primitives for Fast
+                <h2 class="align-center pb-3 mbr-fonts-style display-5">Phase Portraits as Movement Primitives for Fast
 <div>Humanoid Robot Control</div></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Guilherme Maeda 1 , Okan Koc 2 , Jun Morimoto 1∗
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Guilherme Maeda 1 , Okan Koc 2 , Jun Morimoto 1∗
 <div>g.maeda@atr.jp, okan.koc@tuebingen.mpg.de, xmorimo@atrj.jp
 </div><div>1 ATR Computational Neuroscience Laboratories. Kyoto, Japan
  
@@ -86,9 +86,9 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5"><br></h2>
-        <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style mbr-light">Abstract
-<div>Currently, usual approaches for fast robot control are largely reliant on solving
-&nbsp;<span style="font-size: 1.5rem;">online optimal control problems. Such methods are known to be computation</span><span style="font-size: 1.5rem;">ally intensive and sensitive to model accuracy. On the other hand, animals </span><span style="font-size: 1.5rem;">plan complex motor actions not only fast but seemingly with little effort even&nbsp;</span><span style="font-size: 1.5rem;">on unseen tasks. This natural sense of time and coordination motivates us to </span><span style="font-size: 1.5rem;">approach robot control from a motor skill learning perspective to design fast&nbsp;</span><span style="font-size: 1.5rem;">and computationally light controllers that can be learned autonomously by the&nbsp;</span><span style="font-size: 1.5rem;">robot under mild modeling assumptions. This article introduces Phase Portrait&nbsp;</span><span style="font-size: 1.5rem;">Movement Primitives (PPMP), a primitive that predicts dynamics on a low </span><span style="font-size: 1.5rem;">dimensional phase space which in turn is used to govern the high dimensional&nbsp;</span><span style="font-size: 1.5rem;">kinematics of the task. The stark difference with other primitive formulations&nbsp;</span><span style="font-size: 1.5rem;">is a built-in mechanism for phase prediction in the form of coupled oscillators&nbsp;</span><span style="font-size: 1.5rem;">that replaces model-based state estimators such as Kalman filters. The policy&nbsp;</span></div><div>is trained by optimizing the parameters of the oscillators whose output is con<span style="font-size: 1.5rem;">nected to a kinematic distribution in the form of a phase portrait. The drastic&nbsp;</span><span style="font-size: 1.5rem;">reduction in dimensionality allows us to efficiently train and execute PPMPs&nbsp;</span><span style="font-size: 1.5rem;">on a real human-sized, dual-arm humanoid upper body on a task involving 20&nbsp;</span><span style="font-size: 1.5rem;">degrees-of-freedom. We demonstrate PPMPs in interactions requiring fast reac</span><span style="font-size: 1.5rem;">tions times while generating anticipative pose adaptation in both discrete and&nbsp;</span><span style="font-size: 1.5rem;">cyclic tasks.</span></div></h3>
+        <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style mbr-light display-7">Abstract
+<div>Currently, usual approaches for fast robot control are largely reliant on solving  online optimal control problems. Such methods are known to be computationally intensive and sensitive to model accuracy. On the other hand, animals plan complex motor actions not only fast but seemingly with little effort even on unseen tasks. This natural sense of time and coordination motivates us to approach robot control from a motor skill learning perspective to design fast and computationally light controllers that can be learned autonomously by the robot under mild modeling assumptions. This article introduces Phase Portrait Movement Primitives (PPMP), a primitive that predicts dynamics on a low dimensional phase space which in turn is used to govern the high dimensional kinematics of the task. The stark difference with other primitive formulations is a built-in mechanism for phase prediction in the form of coupled oscillators that replaces model-based state estimators such as Kalman filters. The policy 
+<span style="font-size: 1rem;">is trained by optimizing the parameters of the oscillators whose output is connected to a kinematic distribution in the form of a phase portrait. The drastic reduction in dimensionality allows us to efficiently train and execute PPMPs on a real human-sized, dual-arm humanoid upper body on a task involving 20 degrees-of-freedom. We demonstrate PPMPs in interactions requiring fast reactions times while generating anticipative pose adaptation in both discrete and cyclic tasks.</span></div></h3>
         <div class="media-container-row pt-5 ">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper ">
@@ -98,7 +98,7 @@
                         <img src="assets/images/ppmp-icon-ball-pushing-1-1046x535.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs maintaining a ball's limit cycle despite disturbances</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs maintaining a ball's limit cycle under large spatio-temporal disturbances</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7"></p>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         <img src="assets/images/ppmp-icon-handover-1-1046x651.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs negotiating the handover timing with humans</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs negotiating the timing of handovers with humans</h4>
                         <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
