small updates. Missing animated gif with new smaller video.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-fullscreen mbr-parallax-background" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-parallax-background" id="header16-10">
 
     
 
@@ -154,9 +154,8 @@
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Reinforcement Learning of Motor Skills
-<div>using Policy Search and Human
-</div><div>Corrective Advice (IJRR)</div></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">A human-in-the-loop approach where human feedback can come at any time during the execution of an exploration roll-out. The feedback can also come sporadically, where most of the roll-outs do not even to include human feedback. This human feedback is seamlessly incorporated into the policy update as an informed/biased exploration noise. The learning rate increases by factors of 4 to 40 times depending on the task. You can watch the video of a ball-in-cup whre the policy starts from a blank state&nbsp;<a href="https://www.youtube.com/watch?v=Sjngx6-Bk1s" target="_blank">here</a>, and find the details of method in the paper <a href="./pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">here</a>.</p>
+<div>using Policy Search and Human&nbsp;<span style="color: inherit; font-size: 1.5rem; background-color: transparent;">Corrective Advice</span></div></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">A human-in-the-loop approach where human feedback can come at any time during the execution of an exploration roll-out. The feedback can also come sporadically, where most of the roll-outs do not even to include human feedback. This human feedback is seamlessly incorporated into the policy update as an informed/biased exploration noise. The learning rate increases by factors of 4 to 40 times depending on the task. You can watch the video of a ball-in-cup where the policy starts from a blank state&nbsp;<a href="https://www.youtube.com/watch?v=Sjngx6-Bk1s" target="_blank">here</a>, and find the details of method in the paper <a href="./pdf/celeminReinforcementLearningMotor2019.pdf" target="_blank">here</a>.</p>
                     </div>
                 </div>
             </div>
