--- a/ppmp.html
+++ b/ppmp.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/icon2.gif" type="image/x-icon">
   <meta name="description" content="Phase portrait movement primitives">
   
-  <title>PPMP</title>
+  <title>PhasePortraitsMP</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
 
     
 
@@ -95,10 +95,10 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="./videos/PPMP/PPMP_ball_pushing.mp4" class="btn btn-primary display-4" target="_blank">Click for video</a></div>
-                        <img src="assets/images/ppmp-icon-ball-pushing-1-1046x535.png" alt="Mobirise" title="">
+                        <img src="assets/images/ppmp-icon-ball-pushing-1046x535.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs maintaining a ball's limit cycle under large spatio-temporal disturbances</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs maintaining a ball's limit cycle under large spatio-temporal disturbances over more than 5 min or 120 pushes</h4>
                         <p class="mbr-text mbr-fonts-style align-left display-7"></p>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="./videos/PPMP/PPMP_handover.mp4" class="btn btn-primary display-4" target="_blank">Click for video</a></div>
-                        <img src="assets/images/ppmp-icon-handover-1-1046x651.png" alt="Mobirise" title="">
+                        <img src="assets/images/ppmp-icon-handover-1046x651.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Video: PPMPs negotiating the timing of handovers with humans</h4>
