smaller animated gif

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-parallax-background" id="header16-10">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="header1 cid-rJBn3T8pcH mbr-parallax-background" id="header16-10">
 
     
 
@@ -138,7 +138,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/kang-playing.mov.gif" alt="Mobirise" title="">
+                        <img src="assets/images/small-video-fast.avi.gif" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5">Pre-print:<br>Phase Portrait Movement Primitives (PPMP)</h4>
