--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
 
     
 
@@ -88,10 +88,10 @@
                                 <p class="block-text mbr-fonts-style display-7">I am a research scientist working with robots. The motivation of my work is to contribute to the technology that will eventually enable robots to autonomously learn how to help us, without the need of hand-coded programs. 
 <br>
 <br>Autonomous learning is essential when the robotics engineer cannot anticipate which tasks the robot will face after deployment---for example, robots at home or in the hospital---so he cannot pre-program it in advance. Or when the task cannot be easily described by physics modeling and first-order principles such as in this paper [1]; in which case the only hope is that the robot learns the underlying dynamics by itself. Another scenario is when a robot must assess what a human partner is doing so that it can generate corresponding control commands to assist him/her [2]. A learning control example is when a remotely-located robot must self-adapt to the environment without human supervision [3].&nbsp;<br>
-<br>Why should we care about such capabilities? Ultimately, we may have to rely on robots to fill existing/future gaps in our society. Think about the inevitable and unprecedented growth of the elderly population around the globe, the assistance of communities and exploration of resources in remote areas, rescue and disaster response, optimized and adaptive rehabilitation and prosthetics. It is hard to imagine there will be an engineer available to program the robot under these scenarios, where each scenario may encompass numerous and unforesseable tasks.<br>
+<br>Why should we care about such capabilities? Ultimately, we may have to rely on robots to fill existing/future gaps in our society. Think about the inevitable and unprecedented growth of the elderly population around the globe, the assistance of communities and exploration of resources in remote areas, rescue and disaster response, optimized and adaptive rehabilitation and prosthetics. It is hard to imagine there will be an engineer available to program the robot under these scenarios, where each scenario may encompass numerous and unforeseeable tasks.<br>
 <br>Bio: since 2019, I am working as a researcher at Preferred Networks Inc in Tokyo, Japan. Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a master's at the Tokyo Institute of Technology (TITECH) in control engineering. 
 <br>
-<br>Contact : gjmaeda@preferred.jp<br></p>
+<br>Contact : &nbsp;gjmaeda@preferred.jp<br></p>
                             </div>
                         </div>
 
