--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
 
     
 
@@ -89,9 +89,7 @@
 <br>
 <br>Autonomous learning is essential when the robotics engineer cannot anticipate which tasks the robot will face after deployment---for example, robots at home or in the hospital---so he cannot pre-program it in advance. Or when the task cannot be easily described by physics modeling and first-order principles such as in this paper [1]; in which case the only hope is that the robot learns the underlying dynamics by itself. Another scenario is when a robot must assess what a human partner is doing so that it can generate corresponding control commands to assist him/her [2]. A learning control example is when a remotely-located robot must self-adapt to the environment without human supervision [3].&nbsp;<br>
 <br>Why should we care about such capabilities? Ultimately, we may have to rely on robots to fill existing/future gaps in our society. Think about the inevitable and unprecedented growth of the elderly population around the globe, the assistance of communities and exploration of resources in remote areas, rescue and disaster response, optimized and adaptive rehabilitation and prosthetics. It is hard to imagine there will be an engineer available to program the robot under these scenarios, where each scenario may encompass numerous and unforeseeable tasks.<br>
-<br>Bio: since 2019, I am working as a researcher at Preferred Networks Inc in Tokyo, Japan. Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a master's at the Tokyo Institute of Technology (TITECH) in control engineering. 
-<br>
-<br>Contact : &nbsp;gjmaeda@preferred.jp<br></p>
+<br>Bio: since 2019, I am working as a researcher at Preferred Networks Inc in Tokyo, Japan. Previously, I was at the ATR Computational Neuroscience Lab in the Department of Brain Robot Interface (BRI) also in Japan. Between 2013-2017, I was with the Intelligent Autonomous Systems group (IAS) in TU Darmstadt working with Jan Peters where I led the participation of the IAS group in the European Funded Project 3rd Hand. I received my Ph.D from the Australian Centre for Field Robotics (ACFR) under the supervision of Hugh Durrant-Whyte, Surya Singh, David Rye, and Ian Manchester. Between 2005-2007 I did a master's at the Tokyo Institute of Technology (TITECH) in control engineering. <br></p>
                             </div>
                         </div>
 
@@ -111,7 +109,7 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-10"><p>[1] Maeda, G.; Koc, O.; Morimoto, J. (2018). “Reinforcement Learning of Phase Oscillators for Fast Adaptation to Moving Targets”, Proceedings of Machine Learning Research (PMLR). Conference on Robot Learning (CoRL) 
 <span style="font-size: 1rem;"></span></p><p>[2] Maeda, G.; Neumann, G.; Ewerton, M; Lioutikov, R.; Kroemer, O.; Peters, J. (2017). “Probabilistic Movement Primitives for Coordination of Multiple Human-Robot Collaborative Tasks”, Autonomous Robots (AURO), vol. 41, no. 3, pp. 593–612. 
-<span style="font-size: 1rem;"></span></p><p>[3] Maeda, G.; Manchester, I.; Rye, D. (2015). “Combined ILC and disturbance observer for the rejection of near-repetitive disturbances, with application to excavation”, IEEE Transactions on Control Systems Technology, vol. 23, no. 5, pp. 1754–1769.</p></div>
+<span style="font-size: 1rem;"></span></p><p>[3] Maeda, G.; Manchester, I.; Rye, D. (2015). “Combined ILC and disturbance observer for the rejection of near-repetitive disturbances, with application to excavation”, IEEE Transactions on Control Systems Technology, vol. 23, no. 5, pp. 1754–1769.</p><p><br></p><p>Contact :  gjmaeda@preferred.jp</p></div>
         </div>
     </div>
 </section>
