--- a/ppmp.html
+++ b/ppmp.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="publications.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn"></span>Publications</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="publications.html" target="_blank">Publication list</a><a class="text-white dropdown-item display-4" href="https://scholar.google.co.jp/citations?user=fVCyyDgAAAAJ&hl=en" target="_blank" aria-expanded="false">Google Scholar</a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="about.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                         
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
 
     
 
@@ -65,7 +65,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-5">Phase Portraits as Movement Primitives for Fast
-<div>Humanoid Robot Control</div></h2>
+<div>Humanoid Robot Control</div><br></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">Guilherme Maeda 1 , Okan Koc 2 , Jun Morimoto 1∗
 <div>g.maeda@atr.jp, okan.koc@tuebingen.mpg.de, xmorimo@atrj.jp
 </div><div>1 ATR Computational Neuroscience Laboratories. Kyoto, Japan
@@ -86,7 +86,7 @@
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5"><br></h2>
         <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style mbr-light display-7">Abstract
 <div>Currently, usual approaches for fast robot control are largely reliant on solving  online optimal control problems. Such methods are known to be computationally intensive and sensitive to model accuracy. On the other hand, animals plan complex motor actions not only fast but seemingly with little effort even on unseen tasks. This natural sense of time and coordination motivates us to approach robot control from a motor skill learning perspective to design fast and computationally light controllers that can be learned autonomously by the robot under mild modeling assumptions. This article introduces Phase Portrait Movement Primitives (PPMP), a primitive that predicts dynamics on a low dimensional phase space which in turn is used to govern the high dimensional kinematics of the task. The stark difference with other primitive formulations is a built-in mechanism for phase prediction in the form of coupled oscillators that replaces model-based state estimators such as Kalman filters. The policy 
-<span style="font-size: 1rem;">is trained by optimizing the parameters of the oscillators whose output is connected to a kinematic distribution in the form of a phase portrait. The drastic reduction in dimensionality allows us to efficiently train and execute PPMPs on a real human-sized, dual-arm humanoid upper body on a task involving 20 degrees-of-freedom. We demonstrate PPMPs in interactions requiring fast reactions times while generating anticipative pose adaptation in both discrete and cyclic tasks.</span></div></h3>
+<span style="font-size: 1rem;">is trained by optimizing the parameters of the oscillators whose output is connected to a kinematic distribution in the form of a phase portrait. The drastic reduction in dimensionality allows us to efficiently train and execute PPMPs on a real human-sized, dual-arm humanoid upper body on a task involving 20 degrees-of-freedom. We demonstrate PPMPs in interactions requiring fast reactions times while generating anticipative pose adaptation in both discrete and cyclic tasks.</span></div><br><br><div><span style="font-size: 1rem;">The pre-print can be found <a href="./pdf/maeda2019PPMP_preprint.pdf" target="_blank">here</a>.</span></div><div><br></div></h3>
         <div class="media-container-row pt-5 ">
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper ">
