--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section article content1 cid-rJGX3feLQP" id="content1-1w">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section article content1 cid-rJGX3feLQP" id="content1-1w">
     
      
 
