change layout to sliders

--- a/ppmp.html
+++ b/ppmp.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content4 cid-rJMYajq2VA" id="content4-2p">
 
     
 
