attrib grammar bib link fix.

--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article content1 cid-rJGX3feLQP" id="content1-1w">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section article content1 cid-rJGX3feLQP" id="content1-1w">
     
      
 
