news and updates with addition of past page.

--- a/About.html
+++ b/About.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="features11 cid-rJTbhAfdv0" id="features11-31">
 
     
 
